--- a/Gallery.UI/Views/Routable/SingleFileView.axaml
+++ b/Gallery.UI/Views/Routable/SingleFileView.axaml
@@ -39,67 +39,81 @@
 
         <GridSplitter Grid.Row="2" ResizeDirection="Rows" />
 
-        <ScrollViewer Grid.Row="3">
-            <Grid ColumnDefinitions="2*, Auto, *" Margin="0,0,18,0" MinHeight="50">
-                <StackPanel Grid.Column="0" IsVisible="{Binding IsTracked}" Margin="10">
-                    <DockPanel Margin="0,0,0,10">
-                        <TextBlock Classes="h1">Description</TextBlock>
-                        <Button Command="{Binding ToggleEdit}"
-                                HorizontalAlignment="Right"
-                                Background="Transparent">
-                            <PathIcon Data="{StaticResource edit_regular}" HorizontalAlignment="Right"/>
-                        </Button>
-                    </DockPanel>
-                    
-                    <Carousel SelectedIndex="{Binding IsEditing,
-                                Converter={x:Static c:Converter.BoolToInt}}">
+        <Grid Grid.Row="3"
+              ColumnDefinitions="2*, Auto, *"
+              RowDefinitions="Auto, *"
+              MinHeight="50"
+              Margin="10">
+            
+            <Grid.Styles>
+                <Style Selector="PathIcon">
+                    <Setter Property="Data" Value="{StaticResource edit_regular}"/>
+                </Style>
+                <Style Selector="PathIcon.isEditing">
+                    <Setter Property="Data" Value="{StaticResource arrow_curve_left_regular}"/>
+                </Style>
+            </Grid.Styles>
+            
+            <DockPanel Grid.Column="0" Grid.Row="0"
+                       IsVisible="{Binding IsTracked}"
+                       Margin="0,0,0,10">
+                <TextBlock Classes="h1">Description</TextBlock>
+                <Button Command="{Binding ToggleEdit}"
+                        HorizontalAlignment="Right"
+                        Background="Transparent">
+                    <PathIcon Classes.isEditing="{Binding IsEditing}" Height="25"/>
+                </Button>
+            </DockPanel>
+
+            <ScrollViewer Grid.Column="0" Grid.Row="1" IsVisible="{Binding IsTracked}">
+                <Carousel SelectedIndex="{Binding IsEditing,
+                            Converter={x:Static c:Converter.BoolToInt}}"
+                          Margin="0,0,18,0">
                         
-                        <TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
+                    <TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
                         
-                        <StackPanel Spacing="8">
-                            <TextBox Text="{Binding EditedDescription}"
-                                     AcceptsReturn="True"
-                                     TextWrapping="Wrap"/>
-                            <StackPanel Orientation="Horizontal"
-                                        Spacing="8"
-                                        HorizontalAlignment="Right">
-                                <Button Content="Reset" Command="{Binding ResetTextBox}"/>
-                                <Button Content="Save" Command="{Binding SaveDescription}"/>
-                            </StackPanel>
+                    <StackPanel Spacing="8">
+                        <TextBox Text="{Binding EditedDescription}"
+                                    AcceptsReturn="True"
+                                    TextWrapping="Wrap"/>
+                        <StackPanel Orientation="Horizontal"
+                                    Spacing="8"
+                                    HorizontalAlignment="Right">
+                            <Button Content="Reset" Command="{Binding ResetTextBox}"/>
+                            <Button Content="Save" Command="{Binding SaveDescription}"/>
                         </StackPanel>
+                    </StackPanel>
                         
-                    </Carousel>
-                </StackPanel>
+                </Carousel>
+            </ScrollViewer>
 
-                <GridSplitter Grid.Column="1" ResizeDirection="Columns"/>
+            <GridSplitter Grid.Column="1" ResizeDirection="Columns" Width="20"/>
+            
+            <DockPanel Grid.Column="2" Grid.Row="0" Margin="0,0,0,10">
+                <TextBlock Classes="h1">Tags</TextBlock>
+                <Button Command="{Binding AddTagCommand}"
+                        HorizontalAlignment="Right"
+                        Background="Transparent">
+                    <PathIcon Height="25"/>
+                </Button>
+            </DockPanel>
 
-                <StackPanel Grid.Column="2" Margin="10">
-                    
-                    <DockPanel Margin="0,0,0,10">
-                        <TextBlock Classes="h1">Tags</TextBlock>
-                        <Button Command="{Binding AddTagCommand}"
-                                HorizontalAlignment="Right"
-                                Background="Transparent">
-                            <PathIcon Data="{StaticResource edit_regular}" />
-                        </Button>
-                    </DockPanel>
-                    
-                    <ItemsControl Items="{Binding Tags}">
-                        <ItemsControl.ItemsPanel>
-                            <ItemsPanelTemplate>
-                                <WrapPanel />
-                            </ItemsPanelTemplate>
-                        </ItemsControl.ItemsPanel>
-                        <ItemsControl.ItemTemplate>
-                            <DataTemplate>
-                                <ContentControl Margin="3" Content="{Binding}"/>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
-                    
-                </StackPanel>
-            </Grid>
-        </ScrollViewer>
+            <ScrollViewer Grid.Column="2" Grid.Row="1">
+                <ItemsControl Items="{Binding Tags}" Margin="0,0,18,10">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <ContentControl Margin="3" Content="{Binding}"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+            
+        </Grid>
     </Grid>
 
     <Design.DataContext>
