--- a/Gallery.UI/Views/Routable/SingleFileView.axaml
+++ b/Gallery.UI/Views/Routable/SingleFileView.axaml
@@ -13,7 +13,7 @@
                 Margin="0,0,0,2">
             Back to gallery
         </Button>
-        
+
         <DockPanel Grid.Row="1">
             <Button DockPanel.Dock="Left"
                     Command="{Binding PreviousFileCommand}"
@@ -45,7 +45,7 @@
               IsVisible="{Binding IsTracked}"
               MinHeight="50"
               Margin="10">
-            
+
             <Grid.Styles>
                 <Style Selector="PathIcon">
                     <Setter Property="Data" Value="{StaticResource edit_regular}"/>
@@ -54,7 +54,7 @@
                     <Setter Property="Data" Value="{StaticResource arrow_curve_left_regular}"/>
                 </Style>
             </Grid.Styles>
-            
+
             <DockPanel Grid.Column="0" Grid.Row="0"
                        Margin="0,0,0,10">
                 <TextBlock Classes="h1">Description</TextBlock>
@@ -69,9 +69,9 @@
                 <Carousel SelectedIndex="{Binding IsEditing,
                             Converter={x:Static c:Converter.BoolToInt}}"
                           Margin="0,0,18,0">
-                        
+
                     <TextBlock Text="{Binding Description}" TextWrapping="Wrap"/>
-                        
+
                     <StackPanel Spacing="8">
                         <TextBox Text="{Binding EditedDescription}"
                                     AcceptsReturn="True"
@@ -83,15 +83,15 @@
                             <Button Content="Save" Command="{Binding SaveDescription}"/>
                         </StackPanel>
                     </StackPanel>
-                        
+
                 </Carousel>
             </ScrollViewer>
 
             <GridSplitter Grid.Column="1" ResizeDirection="Columns" Width="20"/>
-            
+
             <DockPanel Grid.Column="2" Grid.Row="0" Margin="0,0,0,10">
                 <TextBlock Classes="h1">Tags</TextBlock>
-                <Button Command="{Binding AddTagCommand}"
+                <Button Command="{Binding EditTagsCommand}"
                         HorizontalAlignment="Right"
                         Background="Transparent">
                     <PathIcon Height="25"/>
@@ -99,20 +99,28 @@
             </DockPanel>
 
             <ScrollViewer Grid.Column="2" Grid.Row="1">
-                <ItemsControl Items="{Binding Tags}" Margin="0,0,18,10">
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <WrapPanel />
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <ContentControl Margin="3" Content="{Binding}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
+                <StackPanel  Margin="0,0,18,10" Spacing="10">
+                    <ItemsControl Items="{Binding Tags}" >
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <WrapPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <ContentControl Margin="3" Content="{Binding}"/>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+
+                    <Button Command="{Binding AddTagCommand}"
+                            HorizontalAlignment="Right">
+                        <!--<PathIcon Height="25"/>-->
+                        Add...
+                    </Button>
+                </StackPanel>
             </ScrollViewer>
-            
+
         </Grid>
     </Grid>
 
