--- a/Gallery.UI/Views/Routable/SearchView.axaml
+++ b/Gallery.UI/Views/Routable/SearchView.axaml
@@ -22,8 +22,8 @@
                       Width="30" Height="30"/>
         </Button>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button Command="{Binding ClearSearch}">Clear</Button>
+        <StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Right">
+            <Button Command="{Binding ClearSearch}">Reset</Button>
             <Button Command="{Binding SearchCommand}">Search</Button>
         </StackPanel>
     </StackPanel>
