--- a/Gallery.UI/Views/Routable/SearchView.axaml
+++ b/Gallery.UI/Views/Routable/SearchView.axaml
@@ -6,27 +6,29 @@
              xmlns:c="using:Gallery.UI.Converters"
              mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="450"
              x:Class="Gallery.UI.Views.SearchView">
-    <StackPanel Margin="10" Spacing="10">
-        <Label>Search for files...</Label>
+    <ScrollViewer Padding="0,0,12,0">
+        <StackPanel Margin="10" Spacing="10">
+            <Label>Search for files...</Label>
 
-        <ItemsControl Items="{Binding Parameters}">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Spacing="10"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-        </ItemsControl>
+            <ItemsControl Items="{Binding Parameters}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Spacing="10"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+            </ItemsControl>
 
-        <Button Command="{Binding AddParameter}" Background="Transparent">
-            <PathIcon Data="{StaticResource add_circle_regular}"
-                      Width="30" Height="30"/>
-        </Button>
+            <Button Command="{Binding AddParameter}" Background="Transparent">
+                <PathIcon Data="{StaticResource add_circle_regular}"
+                          Width="30" Height="30"/>
+            </Button>
 
-        <StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Right">
-            <Button Command="{Binding ClearSearch}">Reset</Button>
-            <Button Command="{Binding SearchCommand}">Search</Button>
+            <StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Right">
+                <Button Command="{Binding ClearSearch}">Reset</Button>
+                <Button Command="{Binding SearchCommand}">Search</Button>
+            </StackPanel>
         </StackPanel>
-    </StackPanel>
+    </ScrollViewer>
 
     <Design.DataContext>
         <vm:SearchViewModel/>
